deployment/stage3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bda-project-app-service
  namespace: default
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '5000'
spec:
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: bda-project-app
  type: NodePort
